# pytest-autotests-templates

./: .gitignore  README.md  conftest.py  pyproject.toml  test_test.py
.docker/: Dockerfile  docker-compose.yaml
.docker/nestjs_test_app/: Dockerfile
.github/workflows/: github-actions-demo.yml
src/generated_api_clients/: openapitools.json
src/generated_api_clients/async_client/: .gitlab-ci.yml  .travis.yml  README.md  pyproject.toml  setup.py  tox.ini
src/generated_api_clients/async_client/.github/workflows/: python.yml
src/generated_api_clients/async_client/.openapi-generator/: FILES
src/generated_api_clients/async_client/docs/: PetApi.md  StoreApi.md  UserApi.md
src/generated_api_clients/async_client/petstore-async-api-client/: __init__.py  api_client.py  configuration.py  rest.py
src/generated_api_clients/async_client/petstore-async-api-client/api/: __init__.py  pet_api.py  store_api.py  user_api.py
src/generated_api_clients/async_client/petstore_async_api_client/: __init__.py  api_client.py  configuration.py  rest.py
src/generated_api_clients/sync_client/: .gitlab-ci.yml  .travis.yml  README.md  pyproject.toml  setup.py  tox.ini
src/generated_api_clients/sync_client/.openapi-generator/: FILES
src/generated_api_clients/sync_client/docs/: PetApi.md  StoreApi.md  UserApi.md
src/generated_api_clients/sync_client/petstore-sync-api-client/: __init__.py  api_client.py  configuration.py  rest.py
tests/: test_nestjs_test_app.py  test_test.py
tests/simple_tests/: simple_test.py
tests/some_api_test/: test_async.py
(+18 files in other folders)
