[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.3.4"
pydantic = "^2.10.3"
petstore-async-api-client = {path = "src/generated_api_clients/async_client"}
pytest-asyncio = "^0.24.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
